# moon_android

./: .gitignore  README.md
Documents/: terestrial_time.bib  terestrial_time.tex
Kitana/: build.gradle  settings.gradle
Kitana/app/: build.gradle
Kitana/core/: build.gradle
rust/: Cargo.toml  build_android  finals2000A.rs
rust/.cargo/: config.toml
rust/delta_t_converter/: Cargo.toml
rust/delta_t_converter/src/: main.rs
rust/delta_t_pred_converter/: Cargo.toml
rust/delta_t_pred_converter/src/: main.rs
rust/moonlib/: Cargo.toml
rust/moonlib/src/: constants.rs  coordinates.rs  earth.rs  ecliptic.rs  jd.rs  lib.rs  nutation.rs  parallax.rs  refraction.rs  time.rs
rust/moonlib/src/date/: date.rs  jd.rs  mod.rs
rust/moonlib/src/moon/: mod.rs  parallax.rs  phase.rs  position.rs  rise_set_transit.rs  semidiameter.rs
rust/moonlib/src/moon/jni_bridge/: mod.rs  rise_set_transit.rs
rust/moonlib/src/sun/: mod.rs  position.rs  sun.rs  vsop87d_ear.rs
rust/moonlib/src/util/: arcsec.rs  binary_search.rs  degrees.rs  mod.rs  radians.rs
rust/src/: Cargo.toml  coordinates.rs  earth.rs  ecliptic.rs  jd.rs  lib.rs  main.rs  nutation.rs  parallax.rs  refraction.rs  time.rs  util.rs
rust/src/moon/: mod.rs  moon_position.rs  phase.rs  position.rs
rust/src/sun/: mod.rs  position.rs  sun.rs  vsop87b_ear.rs  vsop87d_ear.rs
rust/src/util/: arcsec.rs  binary_search.rs  degrees.rs  mod.rs  radians.rs
rust/tabular/src/: lib.rs  moon_position_data.rs  vsop87d_ear.rs
rust/tabular/src/time/: delta_t_data.rs  leap_second_data.rs  mod.rs
(+41 files in other folders)
