[package]
name = "moonlib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tabular = { path = "../tabular" }
assert_approx_eq = "1.1.0"

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.19", default-features = false }

# SS: Rust doesn't like building exes linking to dylibs
#[lib]
#crate-type = ["dylib"]
